[package]
name = "minigrep_egithinji"
version = "0.1.0"
authors = ["Eric Githinji <ericgithinji@gmail.com>"]
edition = "2018"
license = "MIT"
description = "My minigrep implementation from the book."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
